--- a/App/package.json
+++ b/App/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "expo-font": "^11.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-safe-area-context": "^4.7.2",
+    "react-native-tts": "^4.1.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
