--- a/Apps/package.json
+++ b/Apps/package.json
@@ -17,10 +17,18 @@
     "@babel/plugin-transform-object-rest-spread": "^7.22.15",
     "@babel/plugin-transform-optional-catch-binding": "^7.22.11",
     "@babel/plugin-transform-optional-chaining": "^7.23.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.19",
     "@types/styled-components-react-native": "^5.2.3",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.27.0",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.8",
     "uglify-js": "^3.17.4"
