--- a/Apps/package.json
+++ b/Apps/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.19",
     "@types/styled-components-react-native": "^5.2.3",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.13.4",
