--- a/Apps/package.json
+++ b/Apps/package.json
@@ -29,7 +29,7 @@
     "react-native-gesture-handler": "^2.13.4",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.3",
-    "react-native-screens": "^3.27.0",
+    "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
     "styled-components": "^6.0.8",
     "uglify-js": "^3.17.4"
@@ -42,6 +42,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native": "^0.72.6",
     "@types/react-native-vector-icons": "^6.4.15",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
