--- a/Apps/package.json
+++ b/Apps/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-object-rest-spread": "^7.22.15",
     "@babel/plugin-transform-optional-catch-binding": "^7.22.11",
     "@babel/plugin-transform-optional-chaining": "^7.23.0",
+    "@react-native-async-storage/async-storage": "^1.20.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.5",
