--- a/Apps/ios/Apps/Info.plist
+++ b/Apps/ios/Apps/Info.plist
@@ -59,6 +59,8 @@
 		<string>Roboto-Regular.ttf</string>
 		<string>Roboto-Thin.ttf</string>
 		<string>Roboto.ttf</string>
+		<string>KleeOne-Regular.ttf</string>
+		<string>KleeOne-SemiBold.ttf</string>
 	</array>
 </dict>
 </plist>
