--- a/Apps/package.json
+++ b/Apps/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-google-fonts": "^0.0.0",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.25.0",
