--- a/Apps/package.json
+++ b/Apps/package.json
@@ -26,6 +26,7 @@
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-google-fonts": "^0.0.0",
     "react-native-reanimated": "^3.5.4",
