--- a/Apps/package.json
+++ b/Apps/package.json
@@ -19,6 +19,8 @@
     "@babel/plugin-transform-optional-chaining": "^7.23.0",
     "@react-native-async-storage/async-storage": "^1.20.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/auth": "^19.2.2",
     "@react-navigation/drawer": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.19",
