--- a/Apps/package.json
+++ b/Apps/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-transform-async-generator-functions": "^7.23.2",
     "@babel/plugin-transform-class-properties": "^7.22.5",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.22.11",
@@ -19,9 +20,11 @@
     "@babel/plugin-transform-optional-chaining": "^7.23.0",
     "@react-native-async-storage/async-storage": "^1.20.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/auth": "^19.2.2",
-    "@react-navigation/drawer": "^6.6.5",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.19",
     "@types/styled-components-react-native": "^5.2.3",
@@ -29,12 +32,13 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-dialog": "^9.3.0",
-    "react-native-gesture-handler": "^2.13.4",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-google-fonts": "^0.0.0",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.25.0",
-    "react-native-vector-icons": "^10.0.0",
+    "react-native-vector-icons": "^10.1.0",
     "styled-components": "^6.0.8",
     "uglify-js": "^3.17.4"
   },
