--- a/Apps/package.json
+++ b/Apps/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.25.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0",
     "styled-components": "^6.0.8",
     "uglify-js": "^3.17.4"
